MB-35099 fix doc editor field overlapping
- let the search fields in the doc editor wrap freely to avoid overlapping at certain widths
- main fix is in query.css

Reviewed-on: http://review.couchbase.org/112059
Tested-by: Rob Ashcom <rob.ashcom@gmail.com>

--- a/priv/public/ui/app/css/cbui-responsive.css
+++ b/priv/public/ui/app/css/cbui-responsive.css
@@ -215,6 +215,9 @@
     page-break-inside: avoid;
     break-inside: avoid;
   }
+  .controls .column button {
+    margin-top: 0!important;
+  }
 }
 
 /* responsive extra-small ------------------------------- */
